--- a/app/src/main/res/layout/layout_post_list_item.xml
+++ b/app/src/main/res/layout/layout_post_list_item.xml
@@ -3,53 +3,14 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:weightSum="100"
     android:padding="20dp">
 
-    <RelativeLayout
-        android:layout_width="0dp"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="80"
-        android:layout_gravity="center_vertical" >
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/title"
-            android:text="this is a title"
-            android:textColor="#000"
-            android:textSize="17sp"
-            />
-
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="20"
-        android:layout_gravity="center_vertical">
-
-        <TextView
-            android:id="@+id/num_comments"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textAlignment="viewStart"
-            android:textSize="14sp" />
-
-        <ProgressBar
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:id="@+id/progress_bar"
-            style="@style/Widget.AppCompat.ProgressBar"
-            android:layout_centerInParent="true"
-            android:visibility="gone"/>
-
-
-    </RelativeLayout>
-
+        android:id="@+id/title"
+        android:text="@string/this_is_a_title"
+        android:textColor="#000"
+        android:textSize="17sp" />
 
 </LinearLayout>
